Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/BreakAcrossClass.out
BreakAcrossClass.java:16:33: compiler.err.undef.label: M
1 error
